[workspace]
resolver = "2"
members = [
    "extractor", 
    "extractor/proc-macro/registry",
    "runtime",
]

[workspace.package]
author = "fltLi"
version = "0.1.2"
edition = "2024"

[workspace.dependencies]
thiserror = "2"
paste = "1"
once_cell = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
