[package]
name = "runtime"
author = "fltLi"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
extractor = { path = "../extractor" }
thiserror = { workspace = true }
url = "2"
serde = { workspace = true }
serde_json = { workspace = true }
js-sys = "*"
wasm-bindgen = "*"
wasm-bindgen-futures = "*"
serde-wasm-bindgen = "*"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
debug = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
