[package]
name = "runtime"
author.workspace = true
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
extractor = { path = "../extractor" }
thiserror = { workspace = true }
url = "2"
serde = { workspace = true }
serde_json = { workspace = true }
js-sys = "*"
wasm-bindgen = "*"
wasm-bindgen-futures = "*"
serde-wasm-bindgen = "*"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
debug = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
